--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,11 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700');
 
 body {
   background: white;
   color: black;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 14px;
+  font-weight: 300;
   margin: 70px 0;
 }
 
@@ -36,6 +38,7 @@ body {
 
 .chatbar-username {
   flex: 2;
+  font-weight: 600;
 }
 
 .message {
