--- a/styles/home.scss
+++ b/styles/home.scss
@@ -2,6 +2,13 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700');
 
+@font-face {
+    font-family: 'sf_speakeasyregular';
+    src: url('../fonts/SF_Speakeasy-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   background: white;
   color: black;
@@ -82,8 +89,8 @@ body {
   color: inherit;
   display: block;
   float: left;
-  font-weight: 700;
   font-size: 28px;
+  font-family: 'sf_speakeasyregular', sans-serif;
   height: 60px;
   line-height: 60px;
   padding: 0 10px;
