--- a/styles/home.scss
+++ b/styles/home.scss
@@ -19,7 +19,7 @@ body {
   background: white;
   color: black;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
   height: 100%;
 }
@@ -130,7 +130,9 @@ body {
 }
 
 .user-display {
-  padding: 20px;
+  display: block;
+  text-align: center;
+  margin-top: 15px;
 }
 .application-body {
   background-color: $color5;
@@ -141,5 +143,12 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
+}
+.user-list {
+  list-style-type: none;
+  padding: 0;
+  li {
+    padding: 5px 0 5px 25px;
+  }
 }
 
