--- a/styles/home.scss
+++ b/styles/home.scss
@@ -27,12 +27,9 @@ body {
 .chatbar {
   background: $color2;
   border-top: 1px solid black;
-  bottom: 0;
   display: flex;
-  left: 0;
   padding: 5px;
-  position: fixed;
-  right: 0;
+  position: relative;
 }
 
 .chatbar-message,
@@ -77,6 +74,7 @@ body {
 .messages {
   flex: 1 1;
   overflow: auto;
+  padding: 10px 0;
 }
 
 .message {
@@ -90,8 +88,7 @@ body {
 }
 
 .message-content,
-.message-username {
-  overflow: hidden;
+.message-username-container {
   margin: 5px;
   padding: 0 10px;
 }
@@ -100,9 +97,16 @@ body {
   flex: 8;
 }
 
-.message-username {
+.message-username-container {
   flex: 2;
+}
+
+.message-username {
+  background: gray;
+  border: 1px solid black;
+  border-radius: 3px;
   font-weight: 700;
+  padding: 2px 5px;
 }
 
 .navbar {
@@ -148,7 +152,20 @@ body {
   list-style-type: none;
   padding: 0;
   li {
-    padding: 5px 0 5px 25px;
+    border-color: darkgray;
+    border-style: solid;
+    border-width: 1px 0 1px;
+    padding: 10px 0 10px 25px;
   }
 }
 
+input {
+  transition: all ease-in-out 0.15s;
+  -webkit-transition: all ease-in-out 0.15s;
+}
+
+input:focus { 
+  outline: none;
+  border-color: $color3;
+  box-shadow: 0 0 10px $color3;
+}
